--- a/FlightControlWeb/appsettings.json
+++ b/FlightControlWeb/appsettings.json
@@ -1,4 +1,4 @@
-{
+/*{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,4 +7,13 @@
     }
   },
   "AllowedHosts": "*"
+}*/
+{
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://localhost:61834"
+      }
+    }
+  }
 }
